Adding new Project Using ExpressJS

--- a/Project Using ExpressJS/views/about.html
+++ b/Project Using ExpressJS/views/about.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us</title>
-    <link rel="stylesheet" href="/css/about.css" />
+    <link rel="stylesheet" href="css/about.css" />
   </head>
 
   <body>
     <header></header>
     <header>
       <h1>About Us</h1>
-      <nav>
+      <!-- <nav>
         <a href="/gallery">Gallery</a>
         <a href="/about">About Us</a>
         <a href="/contact">Contact</a>
-      </nav>
+      </nav> -->
     </header>
     <div class="section">
       <h2>Who We Are</h2>
@@ -25,7 +25,7 @@
         Here].
       </p>
       <img
-        src="/images/african-lion-2888519_640.jpg"
+        src="images/african-lion-2888519_640.jpg"
         alt="About us image"
         class="image"
       />
@@ -43,7 +43,7 @@
       <h2>Meet Our Team</h2>
       <div class="team-member">
         <img
-          src="/images/cat-1045782_640.jpg"
+          src="images/cat-1045782_640.jpg"
           alt="Team member 1"
           class="image"
         />
