--- a/Project Using ExpressJS/views/gallery.html
+++ b/Project Using ExpressJS/views/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Galleries</title>
-    <link rel="stylesheet" href="/css/gallery.css" />
+    <link rel="stylesheet" href="css/gallery.css" />
   </head>
 
   <body>
@@ -16,13 +16,13 @@
       <h2 class="gallery-title">Gallery 2</h2>
       <div class="gallery">
         <div class="image-container">
-          <img src="/images/butterfly-8095032_640.jpg" alt="Image 1" />
+          <img src="images/butterfly-8095032_640.jpg" alt="Image 1" />
         </div>
         <div class="image-container">
-          <img src="/images/lotus-1205631_640.jpg" alt="Image 2" />
+          <img src="images/lotus-1205631_640.jpg" alt="Image 2" />
         </div>
         <div class="image-container">
-          <img src="/images/poppies-174276_640.jpg" alt="Image 2" />
+          <img src="images/poppies-174276_640.jpg" alt="Image 2" />
         </div>
       </div>
     </div>
